tests/typechecker/should_fail/proc_sets1.csp
b = member(STOP, {STOP, STOP})
